--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 PORT=3000
-MONGODB_URI=mongodb+srv://thunv:lnA5VrMSLjSF4zWT@cluster0.48miq.mongodb.net/
+MONGODB_URI=mongodb+srv://thunv:lnA5VrMSLjSF4zWT@cluster0.48miq.mongodb.net/thunv
