--- a/package.json
+++ b/package.json
@@ -40,12 +40,14 @@
   },
   "devDependencies": {
     "@nestjs/cli": "9.4.2",
+    "@nestjs/jwt": "10.0.3",
     "@nestjs/schematics": "9.1.0",
     "@nestjs/testing": "9.0.0",
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "4.17.13",
     "@types/jest": "29.5.0",
     "@types/node": "18.15.11",
+    "@types/passport-jwt": "4.0.1",
     "@types/passport-local": "1.0.38",
     "@types/supertest": "2.0.11",
     "@typescript-eslint/eslint-plugin": "5.0.0",
@@ -53,7 +55,10 @@
     "eslint": "8.0.1",
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-prettier": "4.0.0",
+    "install": "0.13.0",
     "jest": "29.5.0",
+    "npm": "10.8.3",
+    "passport-jwt": "4.0.1",
     "prettier": "2.3.2",
     "source-map-support": "0.5.21",
     "supertest": "6.1.3",
