--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 PORT=3000
 MONGODB_URI=mongodb+srv://thunv:lnA5VrMSLjSF4zWT@cluster0.48miq.mongodb.net/thunv
-JWT_SECRET=THUNV@
-JWT_EXPIRE=6000S
+# SETUP ACCESS TOKEN
+JWT_ACCESS_TOKEN=THUNV@
+JWT_ACCESS_EXPIRE=1d
